--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,7 +1,13 @@
-<h2>{{ hero.name | uppercase }} details</h2>
-<div><span>id: </span>{{hero.id}}</div>
-<div>
+<h2>Heroes list</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <span class="badge">{{hero.id}} </span>{{hero.name}}
+  </li>
+</ul>
+
+
+<!-- <div>
   <label>name:
     <input [(ngModel)]="hero.name" placeholder="name"/>
   </label>
-</div>
+</div> -->
