--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,11 +4,14 @@
     <span class="badge">{{hero.id}} </span>{{hero.name}}
   </li>
 </ul>
-<div *ngIf="selectedHero">
+
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+
+<!-- <div *ngIf="selectedHero">
   <label>
     <input [(ngModel)]="selectedHero.name" placeholder="selected heroe's name"/>
   </label>
-</div>
+</div> -->
 <!-- <div>
   <h2 *ngIf="selectedHero">{{ selectedHero.name }}</h2>
 </div> -->
