--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -28,6 +28,17 @@
   background-color: #BBD8DC;
   color: white;
 }
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
+}
+
+.heroes a:hover {
+  color:#607D8B;
+}
 .heroes .badge {
   display: inline-block;
   font-size: small;
