--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,7 +1,11 @@
 <h2>Heroes list</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}} </span>{{hero.name}}
+  <li *ngFor="let hero of heroes" >
+    <!-- (click)="onSelect(hero.id)" [class.selected]="hero === selectedHero" -->
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
+    <!-- <span class="badge">{{hero.id}} </span>{{hero.name}} -->
   </li>
 </ul>
 
