--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Top heroes</h3>>
+<h3>Top heroes</h3>
 <div class="grid grid-pad">
     <a routerLink="/detail/{{hero.id}}" *ngFor="let hero of heroes" class="col-1-4">
         <div class="module hero">
