--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,13 +1,14 @@
 <h2>Heroes list</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes" >
-    <!-- (click)="onSelect(hero.id)" [class.selected]="hero === selectedHero" -->
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
-    <!-- <span class="badge">{{hero.id}} </span>{{hero.name}} -->
+    <button class="delete" title="delete hero"
+    (click)="delete(hero)">X</button>
   </li>
 </ul>
+<button routerLink="/detail/0">Add new hero</button>
 
 <!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
 
